--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,13 +1,51 @@
-FROM node:18-alpine
+# Build stage
+FROM node:18-alpine as build
 
 WORKDIR /app
 
+# Copy package files
 COPY package*.json ./
 
+# Install dependencies
 RUN npm install
 
+# Copy source code
 COPY . .
 
+# Build the application
+RUN npm run build
+
+# Development stage
+FROM node:18-alpine as development
+
+WORKDIR /app
+
+# Copy package files
+COPY package*.json ./
+
+# Install all dependencies (including dev dependencies)
+RUN npm install
+
+# Copy source code and configuration files
+COPY . .
+
+# Expose port
 EXPOSE 3000
 
-CMD ["npm", "run", "dev"] 
+# Start development server with host set to allow external connections
+CMD ["npm", "run", "dev", "--", "--host"]
+
+# Production stage
+FROM nginx:alpine
+
+# Copy built assets from build stage
+COPY --from=build /app/dist /usr/share/nginx/html
+
+# Copy nginx configuration
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# Expose port
+EXPOSE 80
+
+# Start nginx
+CMD ["nginx", "-g", "daemon off;"] 
